bozza lezione 9 e header

--- a/9. Keras.ipynb
+++ b/9. Keras.ipynb
@@ -617,6 +617,24 @@
    "source": [
     "Grazie a Keras, con circa 20 righe di codice abbiamo costruito una rete neurale MLP che realizza un'accuratezza di circa il 98% su di un problema di classificazione di immagini."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script>\n",
+    "  $(document).ready(function(){\n",
+    "    $('div.back-to-top').hide();\n",
+    "    $('nav#menubar').hide();\n",
+    "    $('div.prompt').hide();\n",
+    "    $('.hidden-print').hide();\n",
+    "  });\n",
+    "</script>\n",
+    "\n",
+    "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
+    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "</footer>"
+   ]
   }
  ],
  "metadata": {
