lezione 7 corretta fino a overfitting incluso

--- a/9. Keras.ipynb
+++ b/9. Keras.ipynb
@@ -16,17 +16,18 @@
    "source": [
     "Contenuti\n",
     "===\n",
-    "- [Keras: reti neurali e *deep learning* con Python](#Keras:-reti-neurali-e-deep-learning-con-Python)\n",
+    "- [Keras: reti neurali con Python](#Keras:-reti-neurali-con-Python)\n",
     "- [Il dataset MNIST](#Il-dataset-MNIST)\n",
     "- [*Perceptron*, SLP e MLP](#Perceptron,-SLP-e-MLP)\n",
-    "- [*Models*, *layers* e *deep learning*](#Models,-layers-e-deep-learning)"
+    "- [*Models*, *layers* e *deep learning*](#Models,-layers-e-deep-learning)\n",
+    "- [Addestramento e valutazione](#Addestramento-e-valutazione)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Keras: reti neurali e *deep learning* con Python\n",
+    "Keras: reti neurali con Python\n",
     "---"
    ]
   },
@@ -464,6 +465,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Addestramento e valutazione\n",
+    "---\n",
     "Torniamo all'addestramento della nostra rete.\n",
     "\n",
     "Aggiustiamo i dati in modo conveniente: in particolare, vogliamo che ognuno dei 60K esempi di addestramento (le immagini) abbia 28\\*28 feature, quanti sono i pixel. Normalizziamo anche ogni feature tra 0 e 1."
