--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -13,15 +13,8 @@
     "- [6.3](#6.3)\n",
     "- [6.4](#6.4)\n",
     "- [KNN1](#KNN1)\n",
-    "- [KNN2](#KNN2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3.1\n",
-    "---"
+    "- [KNN2](#KNN2)\n",
+    "- [7.3](#7.3)"
    ]
   },
   {
@@ -1061,13 +1054,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7.3\n",
+    "7.4\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1079,6 @@
     "from sklearn import datasets, neighbors\n",
     "from sklearn.utils import shuffle\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "#Carico il dataset\n",
     "digits = datasets.load_digits()\n",
@@ -1111,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
