lezione 7 estesa definitiva

--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -25,7 +25,8 @@
     "    - [Regressione](#Regressione)\n",
     "        - [Metriche](#Metriche)\n",
     "        - [Overfitting](#Overfitting)\n",
-    "    - [Metodi ensemble](#Metodi-ensemble)"
+    "    - [Metodi ensemble](#Metodi-ensemble)\n",
+    "    - [SVM e SVR](#SVM-e-SVR)"
    ]
   },
   {
@@ -1205,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1381,354 @@
    "metadata": {},
    "source": [
     "Metodi ensemble\n",
-    "---"
+    "---\n",
+    "Vediamo adesso un *ensemble*, l'implementazione sklearn di una *random forest* (RF). \n",
+    "\n",
+    "Questo modello è un esempio di *bagging*, uno schema in cui le predizioni di singoli modelli indipendenti e di alta complessità vengono fatte votare (classificazione) o mediate (regressione), con lo scopo di aumentarne la capacità di generalizzazione.\n",
+    "\n",
+    "Addestriamo e testiamo RF sul dataset *digit*, un'instanza di classificazione multi-classe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_digits\n",
+    "\n",
+    "digits = load_digits()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le classi del dataset digit sono i numeri da 0 a 9. Il task riguarda infatti la decodifica automatica di cifre scritte a mano."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(digits['target_names'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importiamo, dal modulo *ensemble*, l'implementazione RF per la regressione: *RandomForestClassifier*.\n",
+    "\n",
+    "Vediamo quali sono le caratteristiche strutturali del modello, e distinguiamo quelle proprie dello schema ensemble da quelle dei singoli alberi che compongono la foresta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+      "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+      "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "            min_samples_leaf=1, min_samples_split=2,\n",
+      "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+      "            oob_score=False, random_state=None, verbose=0,\n",
+      "            warm_start=False)\n",
+      "\n",
+      "DT hyperparameters:\n",
+      "- impurity criterion: gini\n",
+      "- max depth of development: None\n",
+      "- max features sampled at each node: auto\n",
+      "\n",
+      "Ensemble hyperparameters:\n",
+      "- number of trees: 10\n",
+      "- replacement? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier as RF\n",
+    "\n",
+    "model = RF()\n",
+    "print(model)\n",
+    "\n",
+    "print('\\nDT hyperparameters:')\n",
+    "print('- impurity criterion:', model.criterion)\n",
+    "print('- max depth of development:', model.max_depth)\n",
+    "print('- max features sampled at each node:', model.max_features)\n",
+    "\n",
+    "print('\\nEnsemble hyperparameters:')\n",
+    "print('- number of trees:', model.n_estimators)\n",
+    "print('- replacement?', model.bootstrap)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Costruiamo gli insiemi di addestramento e test e validiamo il campo *max_features*. Il valore di questo iperparametro indica la dimensione del sottoinsieme casuale di features nel quale si cerca il migliore split. \n",
+    "\n",
+    "Questa strategia differenzia RF da *bagged trees*, altro schema ensemble basato su DT. A causa della componente random introdotta da max_features, il *bias* dei singoli alberi cresce. Questo  fenomeno è però dominato dalla riduzione in *varianza* dovuta (alla randomicità e) al voto combinato.\n",
+    "\n",
+    "Nel bagging, i singoli modelli che vengono combinati nell'ensemble hanno alta complessità. RF, in particolare, lavora con DT *fully developed*. Inoltre, poichè lo scopo è quello di ridurre il bias dell'ensemble grazie al voto a maggioranza, è preferibile un numero più grande possibile di alberi.\n",
+    "\n",
+    "In breve, l'unico iperparametro che (secondo me) vale la pena di validare è il numero di feature da valutare ad ogni nodo. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validated max_features : 5\n",
+      "Accuracy on test set   : 0.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, y = digits['data'], digits['target']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.3, random_state=0)\n",
+    "\n",
+    "best_model = KCV(RF(n_estimators=1000,#the more the better!\n",
+    "                    max_depth=None),#fully developed!\n",
+    "                 param_grid=[{'max_features' : [2, 3, 5, 10, 30, 50, None]}],\n",
+    "                 cv=3).fit(X_train, y_train).best_estimator_\n",
+    "\n",
+    "print('Validated max_features :', best_model.max_features)\n",
+    "print('Accuracy on test set   : {:.2f}'.format(best_model.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVM e SVR\n",
+    "---\n",
+    "Per finire, vediamo le implementazioni sklearn del modello *support vector machine*. Usiamo il dataset *breast_cancer*, e risolviamo il relativo problema di classificazione binaria con l'implementazione *SVC*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['malignant' 'benign'] [212 357]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_breast_cancer\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "cancer = load_breast_cancer()\n",
+    "print(cancer['target_names'], np.bincount(cancer['target']))\n",
+    "\n",
+    "X, y = cancer['data'], cancer['target']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.3, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
+      "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+      "  tol=0.001, verbose=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = SVC()#support vector classification\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Di default, SVC usa un *kernel gaussiano* (indicato con *rbf*). Validiamo gli iperparametri $C$ e $\\gamma$: questi denotano rispettivamente il peso dato agli errori commessi sui singoli esempi e l'inverso della deviazione standard $\\sigma$ della gaussiana \"montata\" su ogni esempio dal kernel gaussiano.\n",
+    "\n",
+    "Per entrambi gli iperparametri, valori troppo alti possono causare overfitting. Viceversa, valori troppo bassi possono produrre modelli eccessivamente semplici, non sufficienti a \"spiegare\" i dati. Ecco cosa succede, ad esempio, se assegno un valore molto grande a $C$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on train/test: 1.00/0.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = SVC(C=100000).fit(X_train, y_train)\n",
+    "print('Accuracy on train/test: {:.2f}/{:.2f}'.format(model.score(X_train, y_train),\n",
+    "                                                     model.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ci sono diverse ricette di validazione per $C$ e $\\gamma$, sia per la classificazione che per la regressione: ad esempio, si possono assegnare potenze contigue del 2 o del 10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.125, 0.25, 0.5, 1, 2, 4]\n",
+      "[0.001, 0.01, 0.1, 1, 10, 100, 1000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "C_values = [2**i for i in range(-3,3)]\n",
+    "gamma_values = [10**i for i in range(-3,4)]\n",
+    "print(C_values)\n",
+    "print(gamma_values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una volta costruita la griglia, cerchiamo la migliore coppia di valori con KCV."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validated C            : 2\n",
+      "Validated gamma        : 0.001\n",
+      "Accuracy on test set   : 0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_model = KCV(SVC(),\n",
+    "                 param_grid=[{'C': C_values,\n",
+    "                              'gamma': gamma_values}],\n",
+    "                 cv=3).fit(X_train, y_train).best_estimator_\n",
+    "\n",
+    "print('Validated C            :', best_model.C)\n",
+    "print('Validated gamma        :', best_model.gamma)\n",
+    "print('Accuracy on test set   : {:.2f}'.format(best_model.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nell'esempio successivo, vogliamo provare due diverse griglie di iperparametri. In particolare:\n",
+    "\n",
+    "- il valore di $C$ con un kernel lineare\n",
+    "- il valore di $C$ con un kernel gaussiano, per cui voglio validare anche $\\gamma$.\n",
+    "\n",
+    "Perchè è più conveniente usare due griglie?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validated kernel       : linear\n",
+      "Validated C            : 4\n",
+      "Validated gamma        : auto\n",
+      "Accuracy on test set   : 0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_model = KCV(SVC(),\n",
+    "                 param_grid=[{'kernel':['linear'],\n",
+    "                              'C': C_values},#prima griglia\n",
+    "                             {'kernel':['rbf'],\n",
+    "                              'C': C_values,\n",
+    "                              'gamma': gamma_values}],#seconda griglia\n",
+    "                 cv=3).fit(X_train, y_train).best_estimator_\n",
+    "\n",
+    "print('Validated kernel       :', best_model.kernel)\n",
+    "print('Validated C            :', best_model.C)\n",
+    "print('Validated gamma        :', best_model.gamma)\n",
+    "print('Accuracy on test set   : {:.2f}'.format(best_model.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Infine, l'implementazione sklearn di SVM per la regressione è $SVR$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto',\n",
+      "  kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "\n",
+    "print(SVR())"
    ]
   },
   {
