--- a/9. Keras.ipynb
+++ b/9. Keras.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,11 +25,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Keras è lo strumento più avanzato di Python per le reti neurali. Supporta diversi *backend*, come TensorFlow (https://www.tensorflow.org/), CNTK e Theano. Può eseguire calcoli sia su CPU che GPU (https://www.quora.com/Why-are-GPUs-well-suited-to-deep-learning).\n",
+    "Keras è lo strumento più avanzato di Python per le reti neurali. Supporta diversi *backend*, tra cui TensorFlow: https://www.tensorflow.org/. Può eseguire calcoli sia su CPU che GPU: https://www.quora.com/Why-are-GPUs-well-suited-to-deep-learning.\n",
     "\n",
-    "Keras mette a disposizione API di alto livello per costruire ed usare una rete neurale con pochissime righe di codice. Allo stesso tempo, i suoi moduli sono altamente modulari, flessibili ed estensibili.\n",
+    "Keras mette a disposizione API di alto livello per costruire ed usare una rete neurale con pochissime righe di codice. Allo stesso tempo, è una libreria altamente modulare, flessibile e facile da estendere.\n",
     "\n",
-    "Sul web si trovano molte introduzioni alle reti neurali basate su Keras: https://towardsdatascience.com/how-to-build-a-neural-network-with-keras-e8faa33d0ae4.\n",
+    "Sul web si trovano molte introduzioni alle reti neurali basate su Keras, come https://towardsdatascience.com/how-to-build-a-neural-network-with-keras-e8faa33d0ae4.\n",
     "\n",
     "\n",
     "Importiamo la libreria dopo averla installata con *pip*:\n",
@@ -85,7 +75,7 @@
     "\n",
     "Ciascuna immagine rappresenta un numero scritto a mano. *Risolvere* MNIST, cioè imparare ad assegnare ad un'immagine il numero corretto, è considerato l'\"Hello, world!\" delle reti neurali.\n",
     "\n",
-    "Importiamolo attraverso il modulo datasets di Keras. La libreria *pickle* di Python gestisce oggetti *serializzati*, cioè salvati in formato binario."
+    "Importiamo MNIST attraverso il modulo *datasets* di Keras. La libreria *pickle* di Python gestisce oggetti *serializzati*, cioè salvati in formato binario."
    ]
   },
   {
@@ -305,9 +295,9 @@
    "source": [
     "*Perceptron*, SLP e MLP\n",
     "---\n",
-    "Costruiamo adesso con Keras una rete neurale, in particolare un *multi-layer perceptron* (MLP) in grado di riconoscere caratteri scritti a mano.\n",
+    "Costruiamo adesso con Keras una rete neurale, in particolare un *multi-layer perceptron* (MLP), in grado di riconoscere caratteri scritti a mano.\n",
     "\n",
-    "Come abbiamo visto, il *preceptron* è una rete formata da un solo neurone. Questo applica una funzione *gradino* alla somma pesata dei suoi ingressi. Se il risultato supera una *soglia di attivazione*, il nodo risponde 1; altrimenti, 0:\n",
+    "Come abbiamo visto, il *perceptron* è una rete formata da un solo neurone. Questa singola unità applica una funzione *gradino* alla somma pesata dei suoi ingressi. Se il risultato supera una *soglia di attivazione* (per esempio 0), il nodo risponde 1; altrimenti, 0:\n",
     "\n",
     "![Perceptron function](https://wikimedia.org/api/rest_v1/media/math/render/svg/91b90f2214abac34f0aa9bfc48d44a3a5f96425d)\n",
     "\n",
@@ -321,14 +311,14 @@
     "\n",
     "![MLP](https://dzone.com/storage/temp/3627042-mlp-network.png)\n",
     "\n",
-    "Questa qui sopra è una rete *densa*: ogni neurone riceve input da tutti quelli dello livello precedente e inoltra il risultato delle sue operazioni a tutti quelli del livello successivo."
+    "Questa qui sopra è una rete *densa*: ogni neurone riceve input da tutti quelli del livello precedente e inoltra il risultato delle sue operazioni a tutti quelli del livello successivo."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MLP, a differenza del percettrone e di SLP, è in grado di approssimare funzioni non lineari, come ad esempio quella che ci serve per classificare i caratteri scritti a mano."
+    "MLP, a differenza del percettrone e di SLP, è in grado di approssimare funzioni non lineari, come quella che ci serve per risolvere MNIST."
    ]
   },
   {
@@ -358,9 +348,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il livello di input avrà tanti neuroni quante sono le feature, cioè i pixel di ogni immagine: 28\\*28 = 784. Per Keras, lo strato di input è implicito: il numero di nodi di ingresso sarà passato come argomento al primo livello intermedio.\n",
+    "Il livello di input avrà tanti neuroni quante sono le feature. Nel caso di MNIST, i neuroni di input saranno tanti quanti i pixel di ogni immagine: 28\\*28 = 784.\n",
     "\n",
-    "Per risolvere MNIST, abbiamo un MLP con un unico strato intermedio di 512 neuroni. La funzione di attivazione in uscita dal livello intermedio è ReLU."
+    "Per Keras, lo strato di input è implicito: il numero di nodi di ingresso è passato come argomento al primo livello intermedio.\n",
+    "\n",
+    "Costruiamo quindi un MLP con un unico strato intermedio di 512 neuroni. La funzione di attivazione in uscita dal livello intermedio è ReLU."
    ]
   },
   {
@@ -376,11 +368,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Poichè le classi possibili sono 10, serviranno 10 nodi di output. La funzione di attivazione scelta per l'uscita à *softmax*:\n",
+    "Poichè le classi sono 10, serviranno 10 nodi di output. La funzione di attivazione scelta per l'uscita à *softmax*:\n",
     "\n",
     "![Softmax](https://i2.wp.com/sefiks.com/wp-content/uploads/2017/11/softmax1.png?resize=850%2C329)\n",
     "\n",
-    "Softmax trasforma punteggi numerici in probabilità, e si presta bene alla classificazione multi-classe."
+    "Softmax trasforma punteggi numerici (nel nostro caso, le ReLU in uscita dallo strato intermedio) in probabilità, e si presta bene alla classificazione multi-classe."
    ]
   },
   {
@@ -396,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La rete è pronta. Mancano due ingredienti per poterla addestrare ed utilizzare: una funzione di *loss*, cioè un sistema di valutazione dell'errore commesso dalla rete sui singoli esempi, e un *ottimizzatore*, cioè un procedimento di aggiornamento dei parametri della rete, cioè dei suoi pesi.\n",
+    "La rete è (quasi) pronta. Mancano due ingredienti per poterla addestrare ed utilizzare: una funzione di *loss*, cioè un sistema di valutazione dell'errore commesso dal modello sui singoli esempi, e un *ottimizzatore*, cioè un procedimento di aggiornamento dei parametri della rete (i suoi pesi): https://towardsdatascience.com/types-of-optimization-algorithms-used-in-neural-networks-and-ways-to-optimize-gradient-95ae5d39529f.\n",
     "\n",
     "Quanti sono i pesi della rete che abbiamo costruito?"
    ]
@@ -428,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il metodo *compile* inizializza un modello e lo prepara all'addestramento."
+    "Il metodo *compile* inizializza la rete e la prepara all'addestramento."
    ]
   },
   {
@@ -446,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Come abbiamo visto, la rete che abbiamo costruito ha un solo livello intermedio. Con *Deep learning*, da un punto di vista strutturale, si indica nient'altro che l'utilizzo di reti *profonde*, cioè con diversi strati nascosti (ciascuno con la sua funzione di attivazione).\n",
+    "La rete che abbiamo costruito ha un solo livello intermedio. Con *deep learning*, da un punto di vista strutturale, si indica nient'altro che l'utilizzo di reti *profonde*, cioè con diversi strati nascosti (ciascuno con la sua funzione di attivazione).\n",
     "\n",
     "Ognuno dei livelli di una rete può essere visto come un *filtro* per i dati. In ciascuno dei livelli l'informazione arriva in una certa forma, viene interpretata, e ne esce in una forma diversa. \n",
     "\n",
@@ -454,7 +446,7 @@
     "\n",
     "![DeepLearning](https://fortunedotcom.files.wordpress.com/2016/09/lrn-10-01-16-neural-networks-e1474990995824.png)\n",
     "\n",
-    "Questa capacità di generalizzazione e di apprendimento di concetti è quello che rende unico il deep learning. Il salto in avanti rispetto al machine learning degli anni precedenti all'esplosione delle reti neurali profonde è il concetto di *feature learning*. Invece di progettare manualmente le caratteristiche dei dati, queste vengono fatte imparare.\n",
+    "Questa capacità di generalizzazione progressiva e di apprendimento di concetti è quello che rende unico il deep learning. Il salto in avanti rispetto al machine learning degli anni precedenti all'esplosione delle reti neurali profonde è il concetto di *feature learning*. Invece di progettare manualmente le caratteristiche dei dati, queste vengono imparate dalla rete, contestualmente all'apprendimento.\n",
     "\n",
     "I primi strati di una rete profonda, se i dati di apprendimento sono sufficienti, sono in grado di *progettare* autonomamente feature (cioè concetti di basso livello), che verranno rielaborati negli strati successivi.\n",
     "\n",
@@ -469,7 +461,7 @@
     "---\n",
     "Torniamo all'addestramento della nostra rete.\n",
     "\n",
-    "Aggiustiamo i dati in modo conveniente: in particolare, vogliamo che ognuno dei 60K esempi di addestramento (le immagini) abbia 28\\*28 feature, quanti sono i pixel. Normalizziamo anche ogni feature tra 0 e 1."
+    "Aggiustiamo i dati in modo conveniente: in particolare, vogliamo che ognuno dei 60K esempi di addestramento (le immagini) abbia 28\\*28=784 feature, quanti sono i pixel. Normalizziamo anche ogni feature tra 0 e 1."
    ]
   },
   {
@@ -521,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Siamo infine pronti per addestrare e valutare le prestazione della rete. Durante l'addestramento, l'algoritmo di ottimizzazione lavora su di un *batch* (sottoinsieme) di esempi alla volta. Ad ogni *epoca* di addestramento, alla rete vengono presentati tutti gli esempi del training set."
+    "Siamo infine pronti per addestrare e valutare le prestazione della rete. Durante l'addestramento, l'algoritmo di ottimizzazione lavora su di un sottoinsieme (*batch*) di esempi alla volta. Ad ogni *epoca* di addestramento, alla rete vengono presentati tutti gli esempi del training set."
    ]
   },
   {
@@ -588,37 +580,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "60000/60000 [==============================] - 15s 254us/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0.026908305725626025, 0.9917666666666667]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "network.evaluate(train_images, train_labels)#overfitting?"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grazie a Keras, con circa 20 righe di codice abbiamo costruito una rete neurale MLP che realizza un'accuratezza di circa il 98% su di un problema di classificazione di immagini."
+    "Grazie a Keras, con circa 20 righe di codice abbiamo costruito una rete neurale MLP che ottiene un'accuratezza di circa il 98% su di un problema di classificazione di immagini."
    ]
   },
   {
