piccola modifica a lezione 8

--- a/8. Keras.ipynb
+++ b/8. Keras.ipynb
@@ -144,7 +144,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualizziamo le immagini di addestramento grazie ad una funzionalità della libreria Matplotlib. Il magic command\n",
+    "Visualizziamo le immagini di addestramento grazie ad una funzionalità della libreria *Matplotlib*: https://matplotlib.org/index.html.\n",
+    "\n",
+    "Il magic command\n",
     "\n",
     "    %matplotlib inline\n",
     "    \n",
@@ -218,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Come abbiamo detto, le label (classi) sono 10, cioè i numeri da 0 a 9. Visualizziamone la distribuzione usando numpy e seaborn."
+    "Come abbiamo detto, le label (classi) sono 10, cioè i numeri da 0 a 9. Visualizziamone la distribuzione usando numpy e *seaborn*: https://seaborn.pydata.org/."
    ]
   },
   {
