--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -595,12 +595,12 @@
     "np.random.seed(0)#fisso il generatore casuale per la riproducibilità dell'esperimento\n",
     "\n",
     "def KNN(k, X, y, x):\n",
-    "    distances = norm(X_train - x_new, axis=1)\n",
-    "    sorted_labels = y_train[distances.argsort()]\n",
+    "    distances = norm(X - x, axis=1)\n",
+    "    sorted_labels = y[distances.argsort()]\n",
     "    return np.argmax(np.bincount(sorted_labels[:k]))\n",
     "\n",
     "def one_line_KNN(k, X, y, x):\n",
-    "    return np.argmax(np.bincount(y_train[norm(X_train - x_new, axis=1).argsort()][:k]))\n",
+    "    return np.argmax(np.bincount(y[norm(X - x, axis=1).argsort()][:k]))\n",
     "\n",
     "X_train = np.random.random((7,4))\n",
     "y_train = np.random.randint(0, 2, (7))\n",
