--- a/8. Keras.ipynb
+++ b/8. Keras.ipynb
@@ -220,7 +220,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Come abbiamo detto, le label (classi) sono 10, cioè i numeri da 0 a 9. Visualizziamone la distribuzione usando numpy e *seaborn*: https://seaborn.pydata.org/."
+    "Come abbiamo detto, le label (classi) sono 10, cioè i numeri da 0 a 9. Visualizziamone la distribuzione usando numpy e *seaborn*: https://seaborn.pydata.org/.\n",
+    "\n",
+    "Seaborn è uno strumento molto utile per analizzare graficamente la distribuzione di un dataset: https://seaborn.pydata.org/tutorial/distributions.html."
    ]
   },
   {
