--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -372,17 +372,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.999134485262745\n",
-      "0.9991344852627513\n",
-      "342 ms ± 17.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "2.79 ms ± 213 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "0.9992693936220786\n",
+      "0.9992693936220851\n",
+      "323 ms ± 1.59 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "2.3 ms ± 15.9 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -391,9 +391,9 @@
     "import numpy.random as rdm\n",
     "from math import sqrt\n",
     "\n",
-    "def py_std(X):\n",
-    "    X_mean = sum(X) / len(X)\n",
-    "    return sqrt(sum((x-X_mean)**2 for x in X) / len(X))\n",
+    "def py_std(x):\n",
+    "    mean_val = sum(x) / len(x)\n",
+    "    return sqrt(sum((val-mean_val)**2 for val in x) / len(x))\n",
     "\n",
     "large_array = rdm.normal(size=(1000000,))\n",
     "\n",
