--- a/6. NumPy.ipynb
+++ b/6. NumPy.ipynb
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -633,6 +633,23 @@
     "c = np.copy(a)#copia esplicita\n",
     "c[-1] = 1000\n",
     "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1 100   3   4   5   6   7   8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
    ]
   },
   {
@@ -1271,7 +1288,7 @@
     }
    ],
    "source": [
-    "C = np.random.normal(3, 1, (4,5))#normale con media 3 e varianza 1, shape assegnata\n",
+    "C = np.random.normal(3, 1, (4,5))#normale con media 3 e deviazione standard 1, shape assegnata\n",
     "print(C)"
    ]
   },
@@ -1517,7 +1534,7 @@
     "import numpy as np\n",
     "from math import sqrt\n",
     "\n",
-    "def py_std(X):\n",
+    "def py_std(x):\n",
     "    #FILL ME\n",
     "\n",
     "#FILL ME"
