aggiunto toc e footer a lezione 9

--- a/9. Pandas e seaborn.ipynb
+++ b/9. Pandas e seaborn.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Contenuti\n",
+    "===\n",
+    "- [Pandas](#Pandas)\n",
+    "- [Seaborn](#Seaborn)\n",
+    "- [sklearn_pandas](#sklearn_pandas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Pandas\n",
     "==="
    ]
@@ -3384,6 +3395,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "sklearn_pandas\n",
+    "===\n",
     "Supponiamo adesso di voler utilizzare sklearn per la codifica delle feature e per l'addestramento.\n",
     "\n",
     "La libreria *sklearn_pandas* (si installa con pip) è uno strumento molto utile per passare da un DataFrame a qualcosa di utilizzabile con sklearn.\n",
@@ -4062,6 +4075,24 @@
    ],
    "source": [
     "mapper.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script>\n",
+    "  $(document).ready(function(){\n",
+    "    $('div.back-to-top').hide();\n",
+    "    $('nav#menubar').hide();\n",
+    "    $('div.prompt').hide();\n",
+    "    $('.hidden-print').hide();\n",
+    "  });\n",
+    "</script>\n",
+    "\n",
+    "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
+    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "</footer>"
    ]
   }
  ],
